# prime-factorization

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: main.yml  publish.yml
benches/: bench.rs
src/: arith.rs  arithmetic.rs  factorization.rs  ladder_bytes.rs  lib.rs  main.rs  parser.rs  primality.rs  prime.rs  small_primes.rs
src/arith/: mod.rs  tests.rs
src/elliptic/: mod.rs  tests.rs
src/factor/: mod.rs  tests.rs
src/prime/: mod.rs  tests.rs
tests/: integ_tests.rs
