[package]
name = "prime_factorization"
version = "1.0.2"
authors = ["Elmo Moilanen"]
edition = "2021"
license = "CC0-1.0"
description = "Prime factorization up to 128 bit integers."

keywords = ["prime-factorization", "modular-arithmetic", "elliptic-curves"]
categories = ["mathematics"]
repository = "https://github.com/elmomoilanen/prime-factorization"
readme = "README.md"
documentation = "https://docs.rs/prime_factorization/"

exclude = [".github"]

[profile.dev]
opt-level = 3
overflow-checks = true

[profile.test]
opt-level = 3
overflow-checks = false

[profile.release]
opt-level = 3

[dependencies]
num = "0.4"
rand = "0.8"
itertools = "0.10"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
